[gd_scene load_steps=8 format=3 uid="uid://n76iuhlj8qgt"]

[ext_resource type="Script" path="res://resources/scenes/nelix_game/components/characters/enemies/protoenem.gd" id="1_ff84q"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://resources/fonts/Vermin Vibes 1989.ttf" id="2_q7bk0"]
[ext_resource type="Texture2D" uid="uid://beh53re7feh53" path="res://resources/scenes/nelix_game/sprites/thydepre.png" id="3_rcju2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_erglu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mtbuw"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n1ak3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bdr1s"]
radius = 5.0

[node name="protoenem" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_ff84q")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_erglu")

[node name="Mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_mtbuw")
mesh = SubResource("CapsuleMesh_n1ak3")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
target_position = Vector3(0, 0, 5)

[node name="sightrange" type="Area3D" parent="."]
gravity_point = true
gravity = 17.329

[node name="CollisionShape3D" type="CollisionShape3D" parent="sightrange"]
shape = SubResource("SphereShape3D_bdr1s")

[node name="stateindicator" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.162, 0)
billboard = 1
text = "Placeholder
"
font = ExtResource("2_q7bk0")

[node name="eyes" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.993
autostart = true

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.004

[node name="depreface" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.262833, -0.5)
texture = ExtResource("3_rcju2")

[connection signal="body_entered" from="sightrange" to="." method="_on_sightrange_body_entered"]
[connection signal="body_exited" from="sightrange" to="." method="_on_sightrange_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
